0023842: Undefined behavior: Variable 'thePsFont' is used as parameter and destination in s[n]printf()